improved error handling flow, added content body div

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,7 @@ body {
   /*   flex-direction: column; */
   padding: 20px;
   width: 40rem;
-  height: 30rem;
+  height: 32rem;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   position: relative;
@@ -48,6 +48,11 @@ body {
 .container-header {
   display: flex;
   justify-content: space-between;
+}
+
+.container-body {
+  display: flex;
+  flex-direction: column;
 }
 
 .degrees-container {
@@ -140,13 +145,16 @@ body {
   left: 3%;
 }
 
+.error-div {
+  display: flex;
+  justify-content: center;
+  padding-top: 0.5rem;
+}
+
 .input-error-span {
-  display: block;
   font-size: 0.8rem;
   color: red;
   font-weight: bold;
-  float: right;
-  margin-right: 1.7rem;
 }
 
 .dot {
@@ -181,6 +189,21 @@ body {
 
 .hide {
   display: none;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 30%;
+  right: 40%;
+
 }
 
 
@@ -234,6 +257,16 @@ body {
 
   to {
     opacity: 1;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
 
